// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicMarks renderLeaf diplays expected style 1`] = `
Object {
  "children": <strong>
    mockChild
  </strong>,
  "leaf": Object {
    "b": true,
  },
}
`;

exports[`BasicMarks renderLeaf diplays expected style 2`] = `
Object {
  "children": <em>
    mockChild
  </em>,
  "leaf": Object {
    "i": true,
  },
}
`;

exports[`BasicMarks renderLeaf diplays expected style 3`] = `
Object {
  "children": <del>
    mockChild
  </del>,
  "leaf": Object {
    "del": true,
  },
}
`;

exports[`BasicMarks renderLeaf diplays expected style 4`] = `
Object {
  "children": <q>
    mockChild
  </q>,
  "leaf": Object {
    "q": true,
  },
}
`;

exports[`BasicMarks renderLeaf diplays expected style 5`] = `
Object {
  "children": <code>
    mockChild
  </code>,
  "leaf": Object {
    "monospace": true,
  },
}
`;

exports[`BasicMarks renderLeaf diplays expected style 6`] = `
Object {
  "children": <span
    className="latex-editor"
  >
    mockChild
  </span>,
  "leaf": Object {
    "_latex": true,
  },
}
`;

exports[`BasicMarks renderLeaf does nothing 1`] = `
Object {
  "children": "mockChild",
  "leaf": Object {},
}
`;
